[package]
name = "botbot"
version = "0.1.0"
authors = ["Dustin Dawes <gu3st@dustindawes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4.0"
fancy-regex="0.5.0"
chrono="0.4.19"

[dependencies.serenity]
default-features = false
version = "0.10"
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]